<resources>
    <string name="app_name">SthetoSample</string>
    <string name="btn_json_get">JSON GET</string>
    <string name="json_post">JSON POST</string>
    <string name="image_get">IMAGE GET</string>
    <string name="sharedpreferences">SharedPreferences</string>
    <string name="sqlitedb">SQLiteDB</string>
    <string name="get">GET</string>
    <string name="response">Response</string>
    <string name="settings_title">Settings</string>
    <string name="pref_category1_title">General</string>
    <string name="pref_checkbox_title">Boolean setting</string>
    <string name="pref_checkbox_summary">Set the value of this boolean property</string>
    <string name="pref_category2_title">Other Options</string>
    <string name="pref_list_title">List of choices</string>
    <string name="pref_list_summary">Choose from a set of values</string>
    <string name="pref_list_dialog_title">Choices</string>
    <string name="pref_change_message">%1$s is now \'%2$s\'</string>
</resources>
