<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.MainActivity">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_json_get"
        android:id="@+id/btn_json_get"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/json_post"
        android:id="@+id/btn_json_post"
        android:layout_below="@+id/btn_json_get"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_get"
        android:id="@+id/btn_image_get"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/btn_json_post"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sharedpreferences"
        android:id="@+id/btn_shared_preferences"
        android:layout_below="@id/btn_image_get"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sqlitedb"
        android:id="@+id/btn_sqlitedb"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/btn_shared_preferences"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
